Fixing pep-8 issues

--- a/notebooks/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class RenderJSON(object):\n",
+    "class RenderJSON():\n",
     "    def __init__(self, json_data):\n",
     "        if isinstance(json_data, dict):\n",
     "            self.json_str = json.dumps(json_data)\n",
@@ -158,7 +158,7 @@
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_config.getLastException())\n",
-    "    \n",
+    "\n",
     "RenderJSON(response_bytearray)"
    ]
   },
@@ -281,7 +281,7 @@
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_configuration_manager.getLastException())\n",
-    "    \n",
+    "\n",
     "RenderJSON(response_bytearray)"
    ]
   },
@@ -316,7 +316,7 @@
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_configuration_manager.getLastException())\n",
-    "    \n",
+    "\n",
     "RenderJSON(response_bytearray)"
    ]
   },
