--- a/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class RenderJSON(object):\n",
+    "class RenderJSON():\n",
     "    def __init__(self, json_data):\n",
     "        if isinstance(json_data, dict):\n",
     "            self.json_str = json.dumps(json_data)\n",
@@ -379,7 +379,7 @@
     "\n",
     "try:\n",
     "    g2_engine.stats(response_bytearray)\n",
-    "    \n",
+    "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_engine.getLastException())\n",
     "RenderJSON(response_bytearray)"
@@ -420,8 +420,8 @@
     "    last_modified_datetime = datetime.fromtimestamp(last_modified_unixtime)\n",
     "\n",
     "    print(\"Last modified timestamp: {0}\\nLast modified time: {1}\"\n",
-    "          .format(  last_modified_timestamp.decode(), last_modified_datetime))\n",
-    "    \n",
+    "          .format(last_modified_timestamp.decode(), last_modified_datetime))\n",
+    "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_engine.getLastException())"
    ]
@@ -549,7 +549,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response=bytearray()\n",
+    "response = bytearray()\n",
     "try:\n",
     "    g2_engine.addRecordWithReturnedRecordID(\n",
     "        datasource_code_1,\n",
@@ -1071,7 +1071,7 @@
     "    entity_id_3 = response_dictionary[\"RESOLVED_ENTITY\"][\"ENTITY_ID\"]\n",
     "\n",
     "    print(\"Entity ID: {0}\".format(entity_id_3))\n",
-    "    \n",
+    "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_engine.getlastException())\n",
     "RenderJSON(response_bytearray)"
@@ -1470,7 +1470,7 @@
     "    g2_engine.findPathIncludingSourceByRecordID(\n",
     "        datasource_code_2, record_id_2,\n",
     "        datasource_code_3, record_id_3,\n",
-    "        max_degree, \n",
+    "        max_degree,\n",
     "        excluded_records_as_json,\n",
     "        required_dsrcs_as_json,\n",
     "        g2_engine_flags,\n",
@@ -1556,7 +1556,7 @@
     "        buildout_degree,\n",
     "        max_entities,\n",
     "        response_bytearray)\n",
-    "    \n",
+    "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_engine.getLastException())\n",
     "# Print the results.\n",
@@ -1704,7 +1704,7 @@
     "        max_degree,\n",
     "        buildout_degree,\n",
     "        max_entities,\n",
-    "        g2_engine_flags,    \n",
+    "        g2_engine_flags,\n",
     "        response_bytearray)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -2208,8 +2208,8 @@
     "        g2_engine.fetchNext(export_handle, response_bytearray)\n",
     "        if not response_bytearray:\n",
     "            break\n",
-    "        response_dictionary = json.loads(response_bytearray)        \n",
-    "        response = json.dumps(response_dictionary, sort_keys=True, indent=4)        \n",
+    "        response_dictionary = json.loads(response_bytearray)\n",
+    "        response = json.dumps(response_dictionary, sort_keys=True, indent=4)\n",
     "        print(response)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
@@ -2230,7 +2230,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    g2_engine.closeExport(export_handle)  \n",
+    "    g2_engine.closeExport(export_handle)\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_engine.getLastException())"
@@ -2276,7 +2276,7 @@
    "source": [
     "try:\n",
     "    headers = 'RESOLVED_ENTITY_ID,RESOLVED_ENTITY_NAME,RELATED_ENTITY_ID,MATCH_LEVEL,MATCH_KEY,IS_DISCLOSED,IS_AMBIGUOUS,DATA_SOURCE,RECORD_ID,JSON_DATA,LAST_SEEN_DT,NAME_DATA,ATTRIBUTE_DATA,IDENTIFIER_DATA,ADDRESS_DATA,PHONE_DATA,RELATIONSHIP_DATA,ENTITY_DATA,OTHER_DATA'\n",
-    "    export_handle = g2_engine.exportCSVEntityReportV2(headers,g2_engine_flags)\n",
+    "    export_handle = g2_engine.exportCSVEntityReportV2(headers, g2_engine_flags)\n",
     "\n",
     "    while True:\n",
     "        response_bytearray = bytearray()\n",
@@ -2285,8 +2285,8 @@
     "            break\n",
     "        print(response_bytearray.decode())\n",
     "\n",
-    "    g2_engine.closeExport(export_handle)    \n",
-    "    \n",
+    "    g2_engine.closeExport(export_handle)\n",
+    "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_engine.getLastException())"
    ]
@@ -2360,7 +2360,7 @@
     "    response_dictionary = json.loads(response_bytearray)\n",
     "    entity_id_6 = response_dictionary[\"RESOLVED_ENTITY\"][\"ENTITY_ID\"]\n",
     "    print(\"Entity ID: {0}\".format(entity_id_6))\n",
-    "    \n",
+    "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_engine.getLastException())\n",
     "RenderJSON(response_bytearray)"
@@ -2418,7 +2418,7 @@
     "    response_dictionary = json.loads(response_bytearray)\n",
     "    entity_id_7 = response_dictionary[\"RESOLVED_ENTITY\"][\"ENTITY_ID\"]\n",
     "    print(\"Entity ID: {0}\".format(entity_id_7))\n",
-    "    \n",
+    "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_engine.getLastException())\n",
     "RenderJSON(response_bytearray)"
@@ -2476,7 +2476,7 @@
     "    response_dictionary = json.loads(response_bytearray)\n",
     "    entity_id_8 = response_dictionary[\"RESOLVED_ENTITY\"][\"ENTITY_ID\"]\n",
     "    print(\"Entity ID: {0}\".format(entity_id_8))\n",
-    "    \n",
+    "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_engine.getLastException())\n",
     "RenderJSON(response_bytearray)"
@@ -2534,7 +2534,7 @@
     "    response_dictionary = json.loads(response_bytearray)\n",
     "    entity_id_9 = response_dictionary[\"RESOLVED_ENTITY\"][\"ENTITY_ID\"]\n",
     "    print(\"Entity ID: {0}\".format(entity_id_9))\n",
-    "    \n",
+    "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_engine.getLastException())\n",
     "RenderJSON(response_bytearray)"
@@ -2621,10 +2621,10 @@
     "        g2_engine.processWithInfo(\n",
     "            response_bytearray.decode(),\n",
     "            process_response_bytearray)\n",
-    "        \n",
+    "\n",
     "    except G2Exception.G2ModuleGenericException as err:\n",
-    "        print(g2_engine.getLastException()) \n",
-    "        \n",
+    "        print(g2_engine.getLastException())\n",
+    "\n",
     "    RenderJSON(process_response_bytearray)"
    ]
   },
@@ -2644,7 +2644,7 @@
     "if (response_bytearray):\n",
     "    try:\n",
     "        g2_engine.process(response_bytearray.decode())\n",
-    "    \n",
+    "\n",
     "    except G2Exception.G2ModuleGenericException as err:\n",
     "        print(g2_engine.getLastException())"
    ]
@@ -2687,7 +2687,7 @@
     "    import xml.dom.minidom\n",
     "    xml = xml.dom.minidom.parseString(xml_string)\n",
     "    xml_pretty_string = xml.toprettyxml()\n",
-    "    print(xml_pretty_string)   "
+    "    print(xml_pretty_string)"
    ]
   },
   {
@@ -2735,10 +2735,10 @@
     "    xml = xml.dom.minidom.parseString(xml_string)\n",
     "    xml_pretty_string = xml.toprettyxml()\n",
     "    print(xml_pretty_string)\n",
-    "    \n",
+    "\n",
     "# Pretty-print JSON\n",
     "\n",
-    "RenderJSON(info_bytearray)    "
+    "RenderJSON(info_bytearray)"
    ]
   },
   {
@@ -2838,12 +2838,12 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    \n",
+    "\n",
     "    return_code = g2_engine.getRecord(\n",
     "        datasource_code_1,\n",
     "        record_id_1,\n",
     "        response_bytearray)\n",
-    "    \n",
+    "\n",
     "    response_dictionary = json.loads(response_bytearray)\n",
     "    response = json.dumps(response_dictionary, sort_keys=True, indent=4)\n",
     "    print(\"Return Code: {0}\\n{1}\".format(return_code, response))\n",
@@ -2876,7 +2876,7 @@
    "source": [
     "try:\n",
     "    g2_engine.purgeRepository()\n",
-    "    \n",
+    "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_engine.getLastException())"
    ]
