--- a/notebooks/java/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/java/senzing-G2Engine-sdk-api-specification.ipynb
@@ -188,11 +188,11 @@
     "This should be done once per process.\n",
     "The `initV2()` method accepts the following parameters:\n",
     "\n",
-    "- **module_name:** A short name given to this instance of the G2Engine\n",
+    "- **moduleName:** A short name given to this instance of the G2Engine\n",
     "  object.\n",
-    "- **senzing_config_json:** A JSON string containing configuration parameters.\n",
-    "- **verbose_logging:** A boolean which enables diagnostic logging.\n",
-    "- **config_id:** (optional) The identifier value for the engine configuration\n",
+    "- **senzingConfigJson:** A JSON string containing configuration parameters.\n",
+    "- **verbosLogging:** A boolean which enables diagnostic logging.\n",
+    "- **configId:** (optional) The identifier value for the engine configuration\n",
     "  can be returned here.\n",
     "\n",
     "Calling this function will return \"0\" upon success."
@@ -263,7 +263,7 @@
     "-- the function itself will return \"0\" upon success.\n",
     "The `getActiveConfigID()` method accepts one parameter as input:\n",
     "\n",
-    "- **configuration_id:** The identifier value for the engine configuration.\n",
+    "- **configID:** The identifier value for the engine configuration.\n",
     "  The result of function call is returned here"
    ]
   },
@@ -291,9 +291,9 @@
     "-- the function itself will return \"0\" upon success.\n",
     "The exportConfig function accepts the following parameters as input:\n",
     "\n",
-    "- **response_bytearray:** The memory buffer to retrieve the JSON\n",
+    "- **response:** The memory buffer to retrieve the JSON\n",
     "  configuration document\n",
-    "- **config_id_bytearray:** The identifier value for the engine configuration\n",
+    "- **configID:** The identifier value for the engine configuration\n",
     "  can be returned here."
    ]
   },
@@ -379,10 +379,12 @@
     "\n",
     "Once the Senzing engine is initialized, use addRecord() to load a record into the Senzing repository -- addRecord() can be called as many times as desired and from multiple threads at the same time. The addRecord() function returns \"0\" upon success, and accepts four parameters as input:\n",
     "\n",
-    "- **datasource_code:** The name of the data source the record is associated with. This value is configurable to the system\n",
-    "- **record_id:** The record ID, used to identify distinct records\n",
-    "- **data_string:** A JSON document with the attribute data for the record\n",
-    "- **load_id:** The observation load ID for the record; value can be null and will default to data_source\n"
+    "- **dataSourceCode:** The name of the data source the record is associated with. This value is configurable to the system\n",
+    "- **recordID:** The record ID, used to identify distinct records\n",
+    "- **jsonData:** A JSON document with the attribute data for the record\n",
+    "- **loadID:** The observation load ID for the record; value can be null and will default to data_source\n",
+    "- **responseBuffer:** A memory buffer for returning the response\n",
+    "  document.  If an error occurred, an error response is stored here."
    ]
   },
   {
@@ -487,9 +489,9 @@
     "\n",
     "Use `getEntityByRecordIDV2()` to retrieve entity data based on the record ID of a particular data record. This function accepts the following parameters as input:\n",
     "\n",
-    "- **datasource_code:** The name of the data source the record is associated with. This value is configurable to the system\n",
-    "- **record_id:** The record ID for a particular data record\n",
-    "- **g2_engine_flags:** Control flags for specifying what data about the\n",
+    "- **dataSourceCode:** The name of the data source the record is associated with. This value is configurable to the system\n",
+    "- **recordID:** The record ID for a particular data record\n",
+    "- **flags:** Control flags for specifying what data about the\n",
     "  entity to retrieve.\n",
     "- **response:** A memory buffer for returning the response document; if an error occurred, an error response is stored here."
    ]
@@ -536,10 +538,10 @@
     "resolved identity.\n",
     "This function accepts the following parameters as input:\n",
     "\n",
-    "- **entity_id:** The numeric ID of a resolved entity\n",
-    "- **g2_engine_flags:** Control flags for specifying what data about the\n",
+    "- **entityID:** The numeric ID of a resolved entity\n",
+    "- **flags:** Control flags for specifying what data about the\n",
     "  entity to retrieve.\n",
-    "- **response_bytearray:** A memory buffer for returning the response\n",
+    "- **response:** A memory buffer for returning the response\n",
     "  document; if an error occurred, an error response is stored here."
    ]
   },
@@ -568,8 +570,11 @@
     "\n",
     "Use `searchByAttributesV2()` to retrieve entity data based on a user-specified set of entity attributes. This function accepts the following parameters as input:\n",
     "\n",
-    "- **data_string:** A JSON document with the attribute data to search for\n",
-    "- **response:** A memory buffer for returning the response document; if an error occurred, an error response is stored here."
+    "- **jsonData:** A JSON document with the attribute data to search for\n",
+    "- **flags:** Control flags for specifying what data about the\n",
+    "  entity to retrieve.\n",
+    "- **response:** A memory buffer for returning the response\n",
+    "  document; if an error occurred, an error response is stored here."
    ]
   },
   {
@@ -898,17 +903,21 @@
     "\n",
     "These functions have the following parameters:\n",
     "\n",
-    "- **entity_list:** A list of entities, specified by Entity ID\n",
+    "- **entityList:** A list of entities, specified by Entity ID\n",
     "  (JSON document)\n",
-    "- **record_list:** A list of entities, specified by Record ID\n",
+    "- **recordList:** A list of entities, specified by Record ID\n",
     "  (JSON document)\n",
-    "- **max_degree:** The maximum number of degrees in paths between search\n",
+    "- **maxDegree:** The maximum number of degrees in paths between search\n",
     "  entities\n",
-    "- **buildout_degree:** The number of degrees of relationships to show around\n",
+    "- **buildoutDegree:** The number of degrees of relationships to show around\n",
     "  each search entity\n",
-    "- **max_entities:** The maximum number of entities to return in the\n",
+    "- **maxEntities:** The maximum number of entities to return in the\n",
     "  discovered network\n",
-    "\n",
+    "- **flags:** Control flags for specifying what data about the\n",
+    "  entity to retrieve.\n",
+    "- **response:** A memory buffer for returning the response\n",
+    "  document; if an error occurred, an error response is stored here.\n",
+    "  \n",
     "They also have various arguments used to return response documents\n",
     "\n",
     "The functions return a JSON document that identifies the path between the\n",
@@ -925,19 +934,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mString entityList = \"{\\\"ENTITIES\\\": [{\\\"ENTITY_ID\\\":\"+\u001b[0m\u001b[1m\u001b[30m\u001b[41mentityID\u001b[0m\u001b[1m\u001b[30m+\"}, {\\\"ENTITY_ID\\\":\"+entityID2+\"}]}\";\u001b[0m",
+      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
+      "\u001b[1m\u001b[31m  symbol:   variable entityID\u001b[0m",
+      "",
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mString entityList = \"{\\\"ENTITIES\\\": [{\\\"ENTITY_ID\\\":\"+entityID+\"}, {\\\"ENTITY_ID\\\":\"+\u001b[0m\u001b[1m\u001b[30m\u001b[41mentityID2\u001b[0m\u001b[1m\u001b[30m+\"}]}\";\u001b[0m",
+      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
+      "\u001b[1m\u001b[31m  symbol:   variable entityID2\u001b[0m",
+      ""
+     ]
+    }
+   ],
    "source": [
     "StringBuffer response = new StringBuffer();\n",
-    "int max_degree = 2;\n",
-    "int buildout_degree = 1;\n",
-    "int max_entities = 12;\n",
-    "String entity_list = \"{\\\"ENTITIES\\\": [{\\\"ENTITY_ID\\\":\"+entityID+\"}, {\\\"ENTITY_ID\\\":\"+entityID2+\"}]}\";\n",
+    "int maxDegree = 2;\n",
+    "int buildoutDegree = 1;\n",
+    "int maxEntities = 12;\n",
+    "String entityList = \"{\\\"ENTITIES\\\": [{\\\"ENTITY_ID\\\":\"+entityID+\"}, {\\\"ENTITY_ID\\\":\"+entityID2+\"}]}\";\n",
     "\n",
-    "int return_code = g2engine.findNetworkByEntityIDV2(entity_list, max_degree, buildout_degree, max_entities, flags, response);\n",
+    "int return_code = g2engine.findNetworkByEntityIDV2(entityList, maxDegree, buildoutDegree, maxEntities, flags, response);\n",
     "if(return_code!=0)\n",
     "    System.out.print(g2engine.getLastException());\n",
     "else\n",
@@ -953,19 +978,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mString record_list = \"{\\\"RECORDS\\\": [{\\\"RECORD_ID\\\": \\\"\"+\u001b[0m\u001b[1m\u001b[30m\u001b[41mrecordID1\u001b[0m\u001b[1m\u001b[30m+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode1+\"\\\" }, {\\\"RECORD_ID\\\": \\\"\"+recordID2+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode2+\"\\\" }]}\";\u001b[0m",
+      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
+      "\u001b[1m\u001b[31m  symbol:   variable recordID1\u001b[0m",
+      "",
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mString record_list = \"{\\\"RECORDS\\\": [{\\\"RECORD_ID\\\": \\\"\"+recordID1+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+\u001b[0m\u001b[1m\u001b[30m\u001b[41mdataSourceCode1\u001b[0m\u001b[1m\u001b[30m+\"\\\" }, {\\\"RECORD_ID\\\": \\\"\"+recordID2+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode2+\"\\\" }]}\";\u001b[0m",
+      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
+      "\u001b[1m\u001b[31m  symbol:   variable dataSourceCode1\u001b[0m",
+      "",
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mString record_list = \"{\\\"RECORDS\\\": [{\\\"RECORD_ID\\\": \\\"\"+recordID1+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode1+\"\\\" }, {\\\"RECORD_ID\\\": \\\"\"+\u001b[0m\u001b[1m\u001b[30m\u001b[41mrecordID2\u001b[0m\u001b[1m\u001b[30m+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode2+\"\\\" }]}\";\u001b[0m",
+      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
+      "\u001b[1m\u001b[31m  symbol:   variable recordID2\u001b[0m",
+      "",
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mString record_list = \"{\\\"RECORDS\\\": [{\\\"RECORD_ID\\\": \\\"\"+recordID1+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode1+\"\\\" }, {\\\"RECORD_ID\\\": \\\"\"+recordID2+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+\u001b[0m\u001b[1m\u001b[30m\u001b[41mdataSourceCode2\u001b[0m\u001b[1m\u001b[30m+\"\\\" }]}\";\u001b[0m",
+      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
+      "\u001b[1m\u001b[31m  symbol:   variable dataSourceCode2\u001b[0m",
+      ""
+     ]
+    }
+   ],
    "source": [
     "StringBuffer response = new StringBuffer();\n",
-    "int max_degree = 2;\n",
-    "int buildout_degree = 1;\n",
-    "int max_entities = 12;\n",
+    "int maxDegree = 2;\n",
+    "int buildoutDegree = 1;\n",
+    "int maxEntities = 12;\n",
     "String record_list = \"{\\\"RECORDS\\\": [{\\\"RECORD_ID\\\": \\\"\"+recordID1+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode1+\"\\\" }, {\\\"RECORD_ID\\\": \\\"\"+recordID2+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode2+\"\\\" }]}\";\n",
     "\n",
-    "int return_code = g2engine.findNetworkByRecordIDV2(record_list, max_degree, buildout_degree, max_entities, flags, response);\n",
+    "int return_code = g2engine.findNetworkByRecordIDV2(record_List, maxDegree, buildoutDegree, maxEntities, flags, response);\n",
     "if(return_code!=0)\n",
     "    System.out.print(g2engine.getLastException());\n",
     "else\n",
@@ -1000,11 +1049,14 @@
     "\n",
     "These functions have the following parameters:\n",
     "\n",
-    "- **entity_id:** The entity ID for the entity to be analyzed\n",
-    "- **datasource_code:** The data source for the record to be analyzed\n",
-    "- **record_id:** The record ID for the record to be analyzed\n",
-    "- **g2_engine_flags:** Control flags for outputting entities\n",
-    "\n",
+    "- **entityID:** The entity ID for the entity to be analyzed\n",
+    "- **datasourceCode:** The data source for the record to be analyzed\n",
+    "- **recordID:** The record ID for the record to be analyzed\n",
+    "- **flags:** Control flags for outputting entities\n",
+    "- **response:** A memory buffer for returning the response\n",
+    "  document; if an error occurred, an error response is stored here.\n",
+    "  \n",
+    "  \n",
     "They also have various arguments used to return response documents.\n",
     "\n",
     "The functions return a JSON document that gives the results of the record\n",
@@ -1703,7 +1755,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "11.0.8+10-post-Ubuntu-0ubuntu118.04.1"
+   "version": "11.0.11+9-Ubuntu-0ubuntu2.18.04"
   },
   "toc": {
    "base_numbering": 1,
