--- a/notebooks/java/senzing-G2ConfigMgr-sdk-api-specification.ipynb
+++ b/notebooks/java/senzing-G2ConfigMgr-sdk-api-specification.ipynb
@@ -492,7 +492,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "11.0.6+10-post-Ubuntu-1ubuntu118.04.1"
+   "version": "11.0.11+9-Ubuntu-0ubuntu2.18.04"
   },
   "toc": {
    "base_numbering": 1,
