--- a/notebooks/java/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/java/senzing-G2Engine-sdk-api-specification.ipynb
@@ -451,9 +451,11 @@
     "\n",
     "Use `getRecord()` to retrieve a single record from the data repository; the record is assigned in JSON form to a user-designated buffer, and the function itself returns \"0\" upon success. Once the Senzing engine is initialized, `getRecord()` can be called as many times as desired and from multiple threads at the same time. The `getRecord()` function accepts the following parameters as input:\n",
     "\n",
-    "- **data_source:** The name of the data source the record is associated with. This value is configurable to the system\n",
-    "- **record_id:** The record ID, used to identify the record for retrieval\n",
-    "- **response:** A memory buffer for returning the response document; if an error occurred, an error response is stored here"
+    "- **dataSourceCode:** The name of the data source the record is associated with. This value is configurable to the system\n",
+    "- **recordID:** The record ID for a particular data record\n",
+    "- **flags:** Control flags for specifying what data about the\n",
+    "  entity to retrieve.\n",
+    "- **response:** A memory buffer for returning the response document; if an error occurred, an error response is stored here."
    ]
   },
   {
@@ -934,27 +936,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "CompilationException",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mString entityList = \"{\\\"ENTITIES\\\": [{\\\"ENTITY_ID\\\":\"+\u001b[0m\u001b[1m\u001b[30m\u001b[41mentityID\u001b[0m\u001b[1m\u001b[30m+\"}, {\\\"ENTITY_ID\\\":\"+entityID2+\"}]}\";\u001b[0m",
-      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
-      "\u001b[1m\u001b[31m  symbol:   variable entityID\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mString entityList = \"{\\\"ENTITIES\\\": [{\\\"ENTITY_ID\\\":\"+entityID+\"}, {\\\"ENTITY_ID\\\":\"+\u001b[0m\u001b[1m\u001b[30m\u001b[41mentityID2\u001b[0m\u001b[1m\u001b[30m+\"}]}\";\u001b[0m",
-      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
-      "\u001b[1m\u001b[31m  symbol:   variable entityID2\u001b[0m",
-      ""
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "StringBuffer response = new StringBuffer();\n",
     "int maxDegree = 2;\n",
@@ -978,43 +964,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "CompilationException",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mString record_list = \"{\\\"RECORDS\\\": [{\\\"RECORD_ID\\\": \\\"\"+\u001b[0m\u001b[1m\u001b[30m\u001b[41mrecordID1\u001b[0m\u001b[1m\u001b[30m+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode1+\"\\\" }, {\\\"RECORD_ID\\\": \\\"\"+recordID2+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode2+\"\\\" }]}\";\u001b[0m",
-      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
-      "\u001b[1m\u001b[31m  symbol:   variable recordID1\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mString record_list = \"{\\\"RECORDS\\\": [{\\\"RECORD_ID\\\": \\\"\"+recordID1+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+\u001b[0m\u001b[1m\u001b[30m\u001b[41mdataSourceCode1\u001b[0m\u001b[1m\u001b[30m+\"\\\" }, {\\\"RECORD_ID\\\": \\\"\"+recordID2+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode2+\"\\\" }]}\";\u001b[0m",
-      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
-      "\u001b[1m\u001b[31m  symbol:   variable dataSourceCode1\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mString record_list = \"{\\\"RECORDS\\\": [{\\\"RECORD_ID\\\": \\\"\"+recordID1+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode1+\"\\\" }, {\\\"RECORD_ID\\\": \\\"\"+\u001b[0m\u001b[1m\u001b[30m\u001b[41mrecordID2\u001b[0m\u001b[1m\u001b[30m+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode2+\"\\\" }]}\";\u001b[0m",
-      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
-      "\u001b[1m\u001b[31m  symbol:   variable recordID2\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mString record_list = \"{\\\"RECORDS\\\": [{\\\"RECORD_ID\\\": \\\"\"+recordID1+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode1+\"\\\" }, {\\\"RECORD_ID\\\": \\\"\"+recordID2+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+\u001b[0m\u001b[1m\u001b[30m\u001b[41mdataSourceCode2\u001b[0m\u001b[1m\u001b[30m+\"\\\" }]}\";\u001b[0m",
-      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
-      "\u001b[1m\u001b[31m  symbol:   variable dataSourceCode2\u001b[0m",
-      ""
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "StringBuffer response = new StringBuffer();\n",
     "int maxDegree = 2;\n",
     "int buildoutDegree = 1;\n",
     "int maxEntities = 12;\n",
-    "String record_list = \"{\\\"RECORDS\\\": [{\\\"RECORD_ID\\\": \\\"\"+recordID1+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode1+\"\\\" }, {\\\"RECORD_ID\\\": \\\"\"+recordID2+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode2+\"\\\" }]}\";\n",
+    "String recordList = \"{\\\"RECORDS\\\": [{\\\"RECORD_ID\\\": \\\"\"+recordID1+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode1+\"\\\" }, {\\\"RECORD_ID\\\": \\\"\"+recordID2+\"\\\", \\\"DATA_SOURCE\\\": \\\"\"+dataSourceCode2+\"\\\" }]}\";\n",
     "\n",
-    "int return_code = g2engine.findNetworkByRecordIDV2(record_List, maxDegree, buildoutDegree, maxEntities, flags, response);\n",
+    "int return_code = g2engine.findNetworkByRecordIDV2(recordList, maxDegree, buildoutDegree, maxEntities, flags, response);\n",
     "if(return_code!=0)\n",
     "    System.out.print(g2engine.getLastException());\n",
     "else\n",
